// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Shared Components|Table Default 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-gqjmRU hsHWbt"
  >
    <table
      className="sc-VigVT eLiVko"
    >
      <tbody
        className="sc-fjdhpX nsimD"
      >
        <tr
          className="sc-jzJRlG hSVXad"
        >
          <td
            className="sc-cSHVUG OUSGT"
          >
            US
          </td>
          <td
            className="sc-cSHVUG OUSGT"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-cSHVUG OUSGT"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-jzJRlG hSVXad"
        >
          <td
            className="sc-cSHVUG OUSGT"
          >
            PL
          </td>
          <td
            className="sc-cSHVUG OUSGT"
          >
            Warsaw
          </td>
          <td
            className="sc-cSHVUG OUSGT"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-jzJRlG hSVXad"
        >
          <td
            className="sc-cSHVUG OUSGT"
          >
            DE
          </td>
          <td
            className="sc-cSHVUG OUSGT"
          >
            Berlin
          </td>
          <td
            className="sc-cSHVUG OUSGT"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-jzJRlG hSVXad"
        >
          <td
            className="sc-cSHVUG OUSGT"
          >
            FR
          </td>
          <td
            className="sc-cSHVUG OUSGT"
          >
            Paris
          </td>
          <td
            className="sc-cSHVUG OUSGT"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-jzJRlG hSVXad"
        >
          <td
            className="sc-cSHVUG OUSGT"
          >
            ES
          </td>
          <td
            className="sc-cSHVUG OUSGT"
          >
            Madird
          </td>
          <td
            className="sc-cSHVUG OUSGT"
          >
            Spain
          </td>
        </tr>
        <tr
          className="sc-jzJRlG hSVXad"
        >
          <td
            className="sc-cSHVUG OUSGT"
          >
            —
          </td>
          <td
            className="sc-cSHVUG OUSGT"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
          <td
            className="sc-cSHVUG OUSGT"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots Shared Components|Table with header 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-gqjmRU hsHWbt"
  >
    <table
      className="sc-VigVT eLiVko"
    >
      <thead
        className="sc-jTzLTM eCMmlJ"
      >
        <tr
          className="sc-jzJRlG hSVXad"
        >
          <th
            className="sc-kAzzGY cBqPup"
          >
            Code
          </th>
          <th
            className="sc-kAzzGY cBqPup"
          >
            Capital
          </th>
          <th
            className="sc-kAzzGY cBqPup"
          >
            Country
          </th>
        </tr>
      </thead>
      <tbody
        className="sc-fjdhpX nsimD"
      >
        <tr
          className="sc-jzJRlG hSVXad"
        >
          <td
            className="sc-cSHVUG OUSGT"
          >
            US
          </td>
          <td
            className="sc-cSHVUG OUSGT"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-cSHVUG OUSGT"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-jzJRlG hSVXad"
        >
          <td
            className="sc-cSHVUG OUSGT"
          >
            PL
          </td>
          <td
            className="sc-cSHVUG OUSGT"
          >
            Warsaw
          </td>
          <td
            className="sc-cSHVUG OUSGT"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-jzJRlG hSVXad"
        >
          <td
            className="sc-cSHVUG OUSGT"
          >
            DE
          </td>
          <td
            className="sc-cSHVUG OUSGT"
          >
            Berlin
          </td>
          <td
            className="sc-cSHVUG OUSGT"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-jzJRlG hSVXad"
        >
          <td
            className="sc-cSHVUG OUSGT"
          >
            FR
          </td>
          <td
            className="sc-cSHVUG OUSGT"
          >
            Paris
          </td>
          <td
            className="sc-cSHVUG OUSGT"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-jzJRlG hSVXad"
        >
          <td
            className="sc-cSHVUG OUSGT"
          >
            ES
          </td>
          <td
            className="sc-cSHVUG OUSGT"
          >
            Madird
          </td>
          <td
            className="sc-cSHVUG OUSGT"
          >
            Spain
          </td>
        </tr>
        <tr
          className="sc-jzJRlG hSVXad"
        >
          <td
            className="sc-cSHVUG OUSGT"
          >
            —
          </td>
          <td
            className="sc-cSHVUG OUSGT"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
          <td
            className="sc-cSHVUG OUSGT"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots Shared Components|Table with numbered rows 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-gqjmRU hsHWbt"
  >
    <table
      className="sc-VigVT eLiVko"
    >
      <thead
        className="sc-jTzLTM eCMmlJ"
      >
        <tr
          className="sc-jzJRlG hSVXad"
        >
          <th
            className="sc-kAzzGY cBqPup"
          >
            #
          </th>
          <th
            className="sc-kAzzGY cBqPup"
          >
            Code
          </th>
          <th
            className="sc-kAzzGY cBqPup"
          >
            Capital
          </th>
          <th
            className="sc-kAzzGY cBqPup"
          >
            Country
          </th>
        </tr>
      </thead>
      <tbody
        className="sc-fjdhpX nsimD"
      >
        <tr
          className="sc-jzJRlG hSVXad"
        >
          <td
            className="sc-chPdSV gTVSnP"
          >
            1
          </td>
          <td
            className="sc-cSHVUG OUSGT"
          >
            US
          </td>
          <td
            className="sc-cSHVUG OUSGT"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-cSHVUG OUSGT"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-jzJRlG hSVXad"
        >
          <td
            className="sc-chPdSV gTVSnP"
          >
            2
          </td>
          <td
            className="sc-cSHVUG OUSGT"
          >
            PL
          </td>
          <td
            className="sc-cSHVUG OUSGT"
          >
            Warsaw
          </td>
          <td
            className="sc-cSHVUG OUSGT"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-jzJRlG hSVXad"
        >
          <td
            className="sc-chPdSV gTVSnP"
          >
            3
          </td>
          <td
            className="sc-cSHVUG OUSGT"
          >
            DE
          </td>
          <td
            className="sc-cSHVUG OUSGT"
          >
            Berlin
          </td>
          <td
            className="sc-cSHVUG OUSGT"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-jzJRlG hSVXad"
        >
          <td
            className="sc-chPdSV gTVSnP"
          >
            4
          </td>
          <td
            className="sc-cSHVUG OUSGT"
          >
            FR
          </td>
          <td
            className="sc-cSHVUG OUSGT"
          >
            Paris
          </td>
          <td
            className="sc-cSHVUG OUSGT"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-jzJRlG hSVXad"
        >
          <td
            className="sc-chPdSV gTVSnP"
          >
            5
          </td>
          <td
            className="sc-cSHVUG OUSGT"
          >
            ES
          </td>
          <td
            className="sc-cSHVUG OUSGT"
          >
            Madird
          </td>
          <td
            className="sc-cSHVUG OUSGT"
          >
            Spain
          </td>
        </tr>
        <tr
          className="sc-jzJRlG hSVXad"
        >
          <td
            className="sc-chPdSV gTVSnP"
          >
            6
          </td>
          <td
            className="sc-cSHVUG OUSGT"
          >
            —
          </td>
          <td
            className="sc-cSHVUG OUSGT"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
          <td
            className="sc-cSHVUG OUSGT"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
